--- a/test.html
+++ b/test.html
@@ -21,17 +21,27 @@
   <!-- SimpleDatatables CSS -->
   <link href="https://cdn.jsdelivr.net/npm/simple-datatables@latest/dist/style.css" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-
-
   <style>
+    /* Agrega tus estilos normales aquí */
+  
+    /* Estilos para el modo oscuro */
+    .dark-mode {
+      /* Define los colores y estilos para el modo oscuro */
+      background-color: #333;
+      color: #fff;
+    }
+  </style>
+  
+  <style>
+    
     #sidebar {
       transition: all 0.3s;
-      margin-top: 60px;
+      margin-top: 100px;
       /* Ajusta este valor según sea necesario */
     }
 
     #main-content {
-      margin-top: 60px;
+      margin-top: 100px;
       /* Ajusta este valor según sea necesario */
     }
 
@@ -41,10 +51,14 @@
       position: fixed;
       width: 100%;
       top: 0;
-      z-index: 1000;
+      z-index: 777;
     }
 
-  
+    #dropdownMenuProfile {
+      z-index: 1000;
+
+    }
+
     .nav-options {
       display: flex;
       align-items: center;
@@ -53,62 +67,6 @@
     .nav-item {
       margin-right: 20px;
       font-size: 18px;
-    }
-
-    @media (max-width: 768px) {
-
-      #main-content,
-      #sidebar {
-        margin-top: 118px;
-        /* Ajusta el valor según sea necesario */
-      }
-
-      .nav-options .nav-item span {
-        display: none;
-      }
-    }
-  </style>
-  <style>
-    body {
-      display: flex;
-      flex-direction: column;
-      min-height: 100vh;
-    }
-
-    .container-fluid {
-      flex: 1;
-    }
-
-    .footer {
-      margin-top: auto;
-      /* Esto empujará el footer hacia abajo */
-    }
-  </style>
-  <style>
-    /* Estilos para el modo oscuro */
-    .dark-mode {
-      /* Define los colores y estilos para el modo oscuro */
-      background-color: #333;
-      color: #fff;
-    }
-  </style>
-  <style>
-    .nav-options .nav-item a {
-      display: inline-block;
-      padding: 8px 16px;
-      margin: 4px;
-      border: 1px solid transparent;
-      border-radius: 4px;
-      text-decoration: none;
-      color: #fff;
-      /* Color del texto */
-      background-color: #007bff !important;
-      /* Color de fondo */
-    }
-
-    .nav-options .nav-item a:hover {
-      background-color: #0056b3 !important;
-      /* Color de fondo al pasar el ratón */
     }
   </style>
   <script>
@@ -172,10 +130,8 @@
           height="30"></a>
       <div class="nav-options">
 
-        <a class="nav-item" href="{{ url_for('dashboard') }}"><i class="fas fa-tachometer-alt"></i><span
-            class="d-lg-inline"> Dashboard</span></a>
-        <a class="nav-item" href="#"><i class="fas fa-newspaper"></i><span class="d-lg-inline">Novedades</span></a>
-
+        <a class="nav-item" href="{{ url_for('dashboard') }}"><i class="fas fa-tachometer-alt"></i> Dashboard</a>
+        <a class="nav-item" href="#"><i class="fas fa-newspaper"></i> Novedades</a>
         {% if current_user.is_authenticated %}
         <a class="nav-item" href="{{ url_for('index') }}"><i class="fas fa-user-plus"></i><span class="d-lg-inline">
             Premium</span></a>
@@ -183,15 +139,11 @@
         <a class="nav-item" href="{{ url_for('register') }}"><i class="fas fa-user-plus"></i><span class="d-lg-inline">
             Registrarse</span></a>
         {% endif %}
-
-        <button class="btn btn-primary  mx-2" id="dark-mode-toggle"><i class="fas fa-adjust"></i></button>
-
         {% if not current_user.is_authenticated %}
         <a class="btn btn-outline-secondary" href="{{ url_for('login') }}"><i class="fa-solid fa-key"></i> Login</a>
         {% else %}
         <a class="btn btn-outline-secondary" href="{{ url_for('logout') }}"><i class="fa-solid fa-key"></i> Logout</a>
         {% endif %}
-
 
       </div>
     </div>
@@ -205,31 +157,6 @@
       <div class="col-3 bg-light" id="sidebar">
         <div class="p-3">
           <nav class="accordion" id="sidebar-menu">
-            {% if current_user.is_authenticated %}
-            <div class="accordion-item">
-              <h2 class="accordion-header" id="headingProfile">
-                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                  data-bs-target="#collapseProfile" aria-expanded="false" aria-controls="collapseProfile">
-                  <i class="fa-solid fa-crown"></i> Mi Perfil
-                </button>
-              </h2>
-              <div id="collapseProfile" class="accordion-collapse collapse" aria-labelledby="headingProfile"
-                data-bs-parent="#sidebar-menu">
-                <div class="accordion-body">
-                  <ul class="list-unstyled">
-                    <li><a class="" href="{{ url_for('profile') }}">Mi perfil</a></li>
-                    <li><a class="" href="{{ url_for('configuracion') }}"> Configuración</a></li>
-                    <li><a class="" href="{{ url_for('change_password') }}"> Seguridad</a></li>
-                    <li>
-                      <hr class="">
-                    </li> <!-- Separador -->
-                    <li><a class="" href="#"><i class="fa-solid fa-crown"></i> Soporte</a></li>
-                    <li><a class="" href="{{ url_for('logout') }}"> Cerrar sesión</a></li>
-                  </ul>
-                </div>
-              </div>
-            </div>
-            {% endif %}
             {% if current_user.is_authenticated and current_user.role == 'usuario' %}
             <div class="accordion-item">
               <h2 class="accordion-header" id="headingMisSitios">
@@ -310,7 +237,31 @@
                 </div>
               </div>
             </div>
-
+            {% if current_user.is_authenticated and current_user.role == 'usuario' %}
+            <div class="accordion-item">
+              <h2 class="accordion-header" id="headingProfile">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                  data-bs-target="#collapseProfile" aria-expanded="false" aria-controls="collapseProfile">
+                  Mi Perfil
+                </button>
+              </h2>
+              <div id="collapseProfile" class="accordion-collapse collapse" aria-labelledby="headingProfile"
+                data-bs-parent="#sidebar-menu">
+                <div class="accordion-body">
+                  <ul class="list-unstyled">
+                    <li><a class="" href="{{ url_for('profile') }}">Mi perfil</a></li>
+                    <li><a class="" href="{{ url_for('configuracion') }}"> Configuración</a></li>
+                    <li><a class="" href="{{ url_for('change_password') }}"> Seguridad</a></li>
+                    <li>
+                      <hr class="">
+                    </li> <!-- Separador -->
+                    <li><a class="" href="#"><i class="fa-solid fa-crown"></i> Soporte</a></li>
+                    <li><a class="" href="{{ url_for('logout') }}"> Cerrar sesión</a></li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+            {% endif %}
           </nav>
         </div>
       </div>
@@ -320,37 +271,15 @@
       <!-- Main Content -->
       <div class="col" id="main-content">
         <div class="p-3">
-          {% include 'inc/breadcrumbs.html' %}
-
-
-
-
-          <!-- Tu contenido principal aquí -->
-          <div id="container">
-            {% include 'inc/flashmsg.html' %}
-            {% block content %}
-            {% endblock %}
-          </div>
-
-
-
+          <!-- Contenido principal aquí -->
         </div>
-        {% include 'inc/footer.html' %}
       </div>
       <!-- /Main Content -->
     </div>
   </div>
-  <!--
-  <script src="{{ url_for('static', filename='bootstrap.bundle.min.js')}}"></script>
-  -->
 
-
-  {% include 'inc/scripts.html' %}
-
-
-  {% include 'inc/scripts.html' %}
-
-
+  <!-- Botón para alternar el modo oscuro y claro -->
+  <button id="dark-mode-toggle">Toggle Dark Mode</button>
 
 </body>
 
